--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
   text-align: center;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.table-header,
+.table-item {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 3fr 3fr 1.5fr 1fr;
+  padding: 6px 24px;
+  border: 1px solid black;
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+span {
+  text-align: left;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.table-item:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.modal-overlay {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
+  opacity: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.modal {
+  width: 100%;
+  background-color: #fff;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal-content {
+  text-align: left;
+  padding: 15px;
+}
+
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.active {
+  font-weight: bold;
 }
